--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -69,6 +69,7 @@ steps:
     appType: 'webAppLinux'
     WebAppName: 'greencity-mail'
     packageForLinux: '$(build.artifactstagingdirectory)/email/target/*.jar'
+    StartupCommand: 'java -jar *.jar --server.port=80'
     
 
 - task: AzureRmWebAppDeployment@4
@@ -79,3 +80,4 @@ steps:
     appType: 'webAppLinux'
     WebAppName: 'greencity'
     packageForLinux: '$(build.artifactstagingdirectory)/core/target/*.jar'
+    StartupCommand: 'java -jar *.jar --server.port=80'
