--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -50,11 +50,11 @@ steps:
     mavenVersionOption: 'Default'
     options: '-Dspring.profiles.active=prod'
     
-# - script: mv core/target/*.jar core/target/app.jar 
-#   displayName: Rename core jar to app
+- script: mv core/target/*.jar core/target/app.jar 
+  displayName: Rename core jar to app
 
-# - script: mv email/target/*.jar email/target/app.jar 
-#   displayName: Rename email jar to app
+- script: mv email/target/*.jar email/target/app.jar 
+  displayName: Rename email jar to app
 
 - task: CopyFiles@2
   displayName: Copy Files
