--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -36,11 +36,11 @@ steps:
         }
       ]
 
-# - script: echo "spring.profiles.active=production" > ./core/src/main/resources/application.properties
-#   displayName: Change dev -> prod for core app
+- script: echo "spring.profiles.active=production" > ./core/src/main/resources/application.properties
+  displayName: Change dev -> prod for core app
 
-# - script: echo "spring.profiles.active=production" > ./email/src/main/resources/application.properties
-#   displayName: Change dev -> prod for email app
+- script: echo "spring.profiles.active=production" > ./email/src/main/resources/application.properties
+  displayName: Change dev -> prod for email app
 
 - task: Maven@3
   inputs:
@@ -48,7 +48,6 @@ steps:
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
     mavenVersionOption: 'Default'
-    options: '-Dspring.profiles.active=prod'
     
 - script: mv core/target/*.jar core/target/app.jar 
   displayName: Rename core jar to app
