--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -43,7 +43,6 @@ logging.level.greencity.exception.handler.CustomExceptionHandler=${LOG_EXCEPTION
 logging.path=${LOG_PATH}
 logging.file=${LOG_FILE}
 logging.pattern.file=${LOG_PATTERN}
-
 # RabbitMQ
 messaging.rabbit.email.topic=${EMAIL_TOPIC}
 spring.rabbitmq.host=${RABBITMQ_HOST}
@@ -52,5 +51,5 @@ spring.rabbitmq.username=${RABBITMQ_USERNAME}
 # Cache
 spring.cache.caffeine.spec=${CACHE_SPEC}
 #Cloud Storage
-BUCKET_NAME=${BUCKET_NAME}
-STATIC_URL=${STATIC_URL}
+bucketName=${BUCKET_NAME}
+staticUrl=${STATIC_URL}
