--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -48,10 +48,8 @@ messaging.rabbit.email.topic=email-topic-exchange
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
-
 # Cache
 spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
-
 #Cloud Storage
-BUCKET_NAME=${BUCKET_NAME}
-STATIC_URL=${STATIC_URL}
+bucketName=${BUCKET_NAME}
+staticUrl=${STATIC_URL}
