--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -12,7 +12,7 @@ pool:
 
 variables:
   jsonFile: google-creds.json
-  GOOGLE_APPLICATION_CREDENTIALS: $(system.defaultworkingdirectory)/$(jsonFile)
+  GOOGLE_APPLICATION_CREDENTIALS: $(system.defaultworkingdirectory)/core/src/main/resources/$(jsonFile)
 
 steps:
 - task: AzureCLI@2
@@ -22,27 +22,22 @@ steps:
     scriptType: 'bash'
     scriptLocation: inlineScript
     inlineScript: |
-      az keyvault secret download --name google-credentials --vault-name key-vault-greencity --file $(jsonFile)
+      az keyvault secret download --name google-credentials --vault-name key-vault-greencity --file ./core/src/main/resources/$(jsonFile)
 
-- task: AzureAppServiceSettings@1
-  displayName: Set GOOGLE_APPLICATION_CREDENTIALS config in Azure Portal
-  inputs:
-    azureSubscription: 'GreenCity'
-    appName: 'greencity'
-    resourceGroupName: 'GreenCity'
-    appSettings: |
-      [
-        {
-          "name": "GOOGLE_APPLICATION_CREDENTIALS",
-          "value": "$(GOOGLE_APPLICATION_CREDENTIALS)", 
-          "slotSetting": false
-        }
-      ]
-
-- script: |
-   cp $(jsonFile) ./core/$(jsonFile)
-   cp $(jsonFile) ./core/src/main/resources/$(jsonFile)
-  displayName: cpx2
+# - task: AzureAppServiceSettings@1
+#   displayName: Set GOOGLE_APPLICATION_CREDENTIALS config in Azure Portal
+#   inputs:
+#     azureSubscription: 'GreenCity'
+#     appName: 'greencity'
+#     resourceGroupName: 'GreenCity'
+#     appSettings: |
+#       [
+#         {
+#           "name": "GOOGLE_APPLICATION_CREDENTIALS",
+#           "value": "$(GOOGLE_APPLICATION_CREDENTIALS)", 
+#           "slotSetting": false
+#         }
+#       ]
   
  
 - task: Maven@3
